fix the alignment issue

--- a/P1/Website/frontend/src/utils/Comments.module.css
+++ b/P1/Website/frontend/src/utils/Comments.module.css
@@ -16,6 +16,7 @@
   margin-top: 3rem;
   color: white;
   margin-left: 25vh;
+  padding: 1rem;
 }
 
 .commentItem {
